Fixed /kafka/kraft_cluster.md